# mesh-gui-tools

./: .gitattributes  .gitignore  .gitmodules  README.md  vec_print.cpp
CodeForces_tools/: CMakeLists.txt  Doxyfile  Mesh.h  MeshTransformer.cpp  MeshTransformer.h  MeshValidator.cpp  MeshValidator.h  MeshdataExporter.cpp  MetadataExporter.h  ObjExporter.cpp  ObjExporter.h  ObjParser.cpp  ObjParser.h  Readme  csv_manipulation.cpp  main.cpp
CodeForces_tools/html/: _adaptive_mesh_generator_8cpp.html  _adaptive_mesh_generator_8cpp.js  _mesh_8h.html  _mesh_8h_source.html  _mesh_boolean_operations_8cpp.html  _mesh_boolean_operations_8h.js  _mesh_metadata_8h.js  _mesh_transform_8cpp.js  _mesh_transform_8h.html  _mesh_validator_8h.js  _metadata_exporter_8cpp.html  _metadata_exporter_8h.js  class_adaptive_mesh_generator-members.html  class_adaptive_mesh_generator.html  class_adaptive_mesh_generator.js  class_mesh.js  class_mesh_boolean_operations-members.html  class_mesh_boolean_operations.html  class_mesh_converter.js  class_mesh_metadata.js  class_mesh_validator-members.html  class_mesh_validator.html  class_timer-members.html  dir_4197791ff18dd02c801bc5b43bba3f61.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a2fa55b112794443ed883f82475a5643.js  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f87cf45cf3971bc7842866b110ab565f.html  files.html  functions_type.html  globals_defs.html  globals_eval.html  globals_type.html  main_8cpp.js  navtreedata.js  navtreeindex1.js  stb__image_8h.html  struct_face.js  struct_face_element.js  (+7 more)
CodeForces_tools/html/search/: all_11.js  all_13.js  all_19.js  all_7.js  classes_0.js  classes_4.js  classes_5.js  defines_7.js  files_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  searchdata.js  typedefs_0.js  typedefs_5.js  variables_10.js  variables_4.js  variables_5.js  variables_6.js  variables_e.js  variables_f.js
CodeForces_tools/include/: AdaptiveMeshGenerator.h  Mesh.h  MeshBooleanOperations.h  MeshConverter.h  MeshMetadata.h  MeshTransform.h  MeshValidator.h  MetadataExporter.h  ObjExporter.h  ObjParser.h  Timer.h
CodeForces_tools/misc/: csv_manipulation.cpp
CodeForces_tools/src/: AdaptiveMeshGenerator.cpp  MeshBooleanOperations.cpp  MeshConverter.cpp  MeshMetadata.cpp  MeshTransform.cpp  MetadataExporter.cpp  ObjExporter.cpp  ObjParser.cpp  main.cpp
HeatStack/: .gitignore  CMakeLists.txt  README.md  test_boundary  test_humanoid
HeatStack/include/: BTCSMatrixSolver.h  BoundaryConditions.h  CLI.h  HeatEquationSolver.h  InitialTemperature.h  MaterialProperties.h  MeshHandler.h  SafetyArbitrator.h  TemperatureComparator.h  TemperatureDistribution.h  TimeHandler.h  utils.h
HeatStack/src/: BTCSMatrixSolver.cpp  BoundaryConditions.cpp  CLI.cpp  HeatEquationSolver.cpp  InitialTemperature.cpp  MaterialProperties.cpp  MeshHandler.cpp  SafetyArbitrator.cpp  TemperatureComparator.cpp  TemperatureDistribution.cpp  TimeHandler.cpp  initial_temperature.csv  main.cpp  main_gui.cpp
HeatStack/tests/: CMakeLists.txt  test_boundary_conditions.cpp  test_heat_equation_solver.cpp  test_humanoid_mesh.cpp  test_main.cpp  test_material_properties.cpp
In-class material/: class_pointers_ex.cpp  csv_object.cpp  vec_print.cpp
MeshX/: CMakeLists.txt  README.md
MeshX/examples/Updated/: humanoid_robot.obj.mtl  humanoid_robot.off  humanoid_robot_simple.off  spherical_surface_smooth.off
MeshX/html/: _adaptive_mesh_generator_8h.html  _adaptive_mesh_generator_8h.js  _adaptive_mesh_generator_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _mesh_8h.js  _mesh_boolean_operations_8h.html  _mesh_boolean_operations_8h_source.html  _mesh_converter_8cpp.html  _mesh_converter_8h.html  _mesh_converter_8h.js  _mesh_converter_8h_source.html  _mesh_metadata_8cpp.html  _mesh_metadata_8h.html  _mesh_metadata_8h_source.html  _mesh_transform_8cpp.html  _mesh_transform_8h.js  _mesh_transform_8h_source.html  _mesh_validator_8cpp.html  _mesh_validator_8h.html  _mesh_validator_8h_source.html  _metadata_exporter_8h.html  _metadata_exporter_8h_source.html  _obj_exporter_8cpp.html  _obj_exporter_8h.html  _obj_exporter_8h.js  _obj_exporter_8h_source.html  _obj_parser_8cpp.html  _obj_parser_8h.html  _obj_parser_8h.js  _obj_parser_8h_source.html  _timer_8h.html  _timer_8h_source.html  annotated.html  annotated_dup.js  class_mesh-members.html  class_mesh.html  class_mesh_boolean_operations.js  class_mesh_converter-members.html  class_mesh_converter.html  (+48 more)
MeshX/html/search/: all_1.js  all_10.js  all_12.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_6.js  defines_5.js  files_2.js  files_3.js  functions_0.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_d.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  variables_0.js  variables_1.js  variables_11.js  variables_12.js  variables_2.js  (+6 more)
MeshX/include/: Mesh.h  MeshConverter.h  MeshMetadata.h  MetadataExporter.h  Timer.h  main1.cpp  main2.cpp  merge_meshes  metadata.txt  my_program
MeshX/src/: MeshBooleanOperations.cpp  MeshConverter.cpp  MeshValidator.cpp  MetadataExporter.cpp  ObjParser.cpp
